--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
                     </div>
                 </div>
             </div>
+            <img src="" style="width: 100%" alt="" id="result">
             <script>
                 var img =  document.getElementById("result");
                 function show(pic)
